force-app/main/default/objects/NTE_Stripe_Config__mdt/NTE_Stripe_Config__mdt.object-meta.xml
<CustomObject>
    <label>NTE Stripe Configuration</label><pluralLabel>NTE Stripe Configurations</pluralLabel><visibility>Public</visibility>
</CustomObject>