force-app/main/default/objects/NTE_Stripe_Config__mdt/fields/Allowed_Email__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Email__c</fullName>
    
<label>Recipient Email Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>