force-app/main/default/objects/NTE_Stripe_Config__mdt/fields/Expected_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Expected_Account_Id__c</fullName>
    
<label>Expected Stripe Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>