force-app/main/default/objects/NTE_Stripe_Config__mdt/fields/Expected_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Expected_Org_Id__c</fullName>
    
<label>Expected Salesforce Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>