force-app/main/default/objects/NTE_Stripe_Config__mdt/fields/Live_Mode__c.field-meta.xml
<CustomField>
    <fullName>Live_Mode__c</fullName>
    <defaultValue>false</defaultValue>
<label>Live Payments</label>
    
    <type>Checkbox</type>
</CustomField>