force-app/main/default/objects/NTE_Stripe_Config__mdt/fields/Reference_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Reference_Prefix__c</fullName>
    
<label>Test Booking Reference Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>