force-app/main/default/objects/NTE_Stripe_Config__mdt/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    
<label>Provisional Test Tax Rate</label>
    <precision>5</precision><scale>2</scale>
    <type>Number</type>
</CustomField>